--- a/app/views/admin/functions/_index.html.erb
+++ b/app/views/admin/functions/_index.html.erb
@@ -6,7 +6,7 @@
     <th>Описание</th>
     <th>Доступ</th>
     <th>Роль</th>
-    <th colspan="3">Действия</th>
+    <th colspan="4">Действия</th>
   </tr>
 
   <% @functions.each do |function| %>
@@ -28,4 +28,7 @@
     </tr>
   <% end %>
 </table>
-<%= link_to 'Создать новую функцию', new_admin_function_path %>
+
+<%= link_to 'Создать новую функцию', new_admin_function_path, class:"ui teal button" %>
+<br>
+<br>
