--- a/app/views/admin/roles/edit.html.erb
+++ b/app/views/admin/roles/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Редактировать должность</h1>
 <%= render 'form', role: @role %>
-<%= link_to 'Назад', admin_roles_path %>
+<%= link_to 'Назад', admin_roles_path, class:"ui teal button" %>
