--- a/app/views/admin/functions/_form.html.erb
+++ b/app/views/admin/functions/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: [:admin, @function], local: true do |f| %>
   <% if @function.errors.any? %>
     <div class="errors">
-      Total errors: <%= @function.errors.count %>
+      Ошибки: <%= @function.errors.count %>
       <ul>
         <% @function.errors.full_messages.each do |message| %>
         <li><%= message %></li>
