--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -5,7 +5,7 @@
     <%= form_with model: [:admin, @order], local: true do |f| %>
       <% if @order.errors.any? %>
         <div class="errors">
-          Total errors: <%= @order.errors.count %>
+          Ошибки: <%= @order.errors.count %>
           <ul>
             <% @order.errors.full_messages.each do |message| %>
               <li><%= message %></li>
