--- a/app/views/admin/roles/_form.html.erb
+++ b/app/views/admin/roles/_form.html.erb
@@ -3,7 +3,7 @@
 		<%= form_with model: [:admin, @role], local: true do |f| %>
 			<% if @role.errors.any? %>
 				<div class="errors">
-					Total errors: <%= @role.errors.count %>
+					Ошибки:  <%= @role.errors.count %>
 					<ul>
 						<% @role.errors.full_messages.each do |message| %>
 						<li><%= message %></li>
