--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -55,6 +55,7 @@
 
       <div><br><br>
         <%= f.submit "Подтвердить", class:"ui teal button" %>
+        <%= f.submit "Назад",class:"ui teal button" %>
       </div>
     <% end %>
   </div>
