--- a/app/views/admin/workers/index.html.erb
+++ b/app/views/admin/workers/index.html.erb
@@ -25,7 +25,7 @@
 		<td>
 			<% if current_worker.edit_worker_access_is_given? %>
 				<%= link_to  edit_admin_worker_path(worker) do %>
-					<i class="large circular teal inverted pencil alternate icon"></i>
+					<i class="large edit icon"></i></i>
 				<% end %>
 			<% end %>
 		</td>
