--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -147,14 +147,14 @@
 		<% if worker_signed_in? %>
 		<% if current_worker.edit_order_access_is_given? == true %>
 		<th>
-			<%= link_to edit_admin_order_path(order) do %>
-			<i class="circular teal inverted pencil alternate icon"></i>
-			<% end%>
+				<%= link_to edit_admin_order_path(order) do %>
+					<i class="large edit icon"></i>
+				<% end%>
 			<% end%>
 			<% if current_worker.destroy_order_access_is_given? == true %>
-			<%= link_to admin_order_path(order), data: { confirm: 'Вы уверены?' },method: :delete do %>
-			<i class="circular inverted red trash alternate outline icon"></i>
-			<% end %>
+				<%= link_to admin_order_path(order), data: { confirm: 'Вы уверены?' },method: :delete do %>
+					<i class="circular inverted red trash alternate outline icon"></i>
+				<% end %>
 		</th>
 		<% end%>
 		<% end %>
