--- a/app/views/admin/workers/edit.html.erb
+++ b/app/views/admin/workers/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', worker: @worker %>
 
-<%= link_to 'Назад', admin_workers_path %>
+<br> <%= link_to 'Назад', admin_workers_path, class:"ui teal button" %>
