--- a/app/views/admin/workers/new.html.erb
+++ b/app/views/admin/workers/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Новый сотрудник</h1>
-<%= render 'form', worker: @worker %>
-<%= link_to 'Назад', admin_workers_path %>
+<%= render 'form', worker: @worker %><br>
+<%= link_to 'Назад', admin_workers_path, class:"ui teal button" %>
