--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -133,41 +133,7 @@
 
 		<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
 			<div class="container">
-				<form>
-					<div class="row justify-content-center">
-						<div class="col">
-							<label for="product">Товары:</label>
-							<input type="text" class="form-control" id="product" placeholder="Все товары">
-						</div>
-						<div class="col">
-							<label for="delivery_type">Тип доставки:</label>
-							<input type="text" class="form-control" id="delivery_type" placeholder="Тип доставки">
-						</div>
-
-						<div class="col">
-							<label for="search">Условие на поле:</label>
-							<input type="text" class="form-control" id="search" placeholder="ID">
-						</div>
-					</div>
-					<br>
-					<div class="row justify-content-center">
-
-						<button class="btn btn-info mr-2">За указанный период</button>
-						<button class="btn btn-info mr-2">За сегодня</button>
-						<button class="btn btn-info mr-2">За вчера</button>
-						<button class="btn btn-info mr-2">За текущий месяц</button>
-						<button class="btn btn-info mr-2">За текущий год</button>
-						<button class="btn btn-info mr-2">За все время</button>
-
-					</div>
-					<br>
-					<div class="row justify-content-center">
-						
-							<button  class="btn btn-success mr-2">Применить условия</button>
-							<button  class="btn btn-danger">Сбросить фильтр</button>
-						
-					</div>
-				</form>
+				<%= render 'form' %>
 			</div>
 		</div>
 	</div>
