Добавил в форму поле

--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -13,6 +13,11 @@
 			<label for="search_for">Условие на поле:</label>
 			<input type="text" class="form-control" id="search_for" placeholder="ID">
 		</div>
+
+		<div class="col">
+			<label for="search">Значение:</label>
+			<input type="text" class="form-control" id="search">
+		</div>
 	</div>
 	<br>
 	<div class="row justify-content-center">
