--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -35,7 +35,7 @@
 
       <div class="field">
         <%= f.label 'Тип доставки' %>
-        <%= f.text_field :delivery_type, placeholder: 'Выяснить' %><br>
+        <%= f.select( :delivery_type, options_for_select(Order.delivery_types.keys) ) %><br>
       </div>
 
       <div class="field">
