--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -156,33 +156,35 @@
 			<th colspan="2">Действия</th>
 		</tr>
 	</thead>
-	<% @orders.each do |order| %>
-	<tr>
-		<th><b><%= order.id %></b></th>
-		<th><b><%= order.product.name %></b></th>
-		<th><b><%= order.client_name %></b></th>
-		<th><b><%= order.client_phone %></b></th>
-		<th><b><%= order.client_email %></b></th>
-		<th><b><%= order.client_addres %></b></th>
-		<th><b><%= order.translated_delivery_type %></b></th>
-		<th><b><%= order.order_price %></b></th>
-		<th><b><%= order.quantity %></b></th>
-		<th><b><%= order.total_price %></b></th>
-		<th><b><%= order.translated_status %></b></th>
-		<% if worker_signed_in? %>
-		<% if current_worker.edit_order_access_is_given? == true %>
-		<th>
-			<%= link_to edit_admin_order_path(order) do %>
-			<i class="large edit icon"></i>
-			<% end%>
-			<% end%>
-			<% if current_worker.destroy_order_access_is_given? == true %>
-			<%= link_to admin_order_path(order), data: { confirm: 'Вы уверены?' },method: :delete do %>
-			<i class="circular inverted red trash alternate outline icon"></i>
-			<% end %>
-		</th>
-		<% end%>
+	<% if @orders.present? %>
+		<% @orders.each do |order| %>
+			<tr>
+				<th><b><%= order.id %></b></th>
+				<th><b><%= order.product.name %></b></th>
+				<th><b><%= order.client_name %></b></th>
+				<th><b><%= order.client_phone %></b></th>
+				<th><b><%= order.client_email %></b></th>
+				<th><b><%= order.client_addres %></b></th>
+				<th><b><%= order.translated_delivery_type %></b></th>
+				<th><b><%= order.order_price %></b></th>
+				<th><b><%= order.quantity %></b></th>
+				<th><b><%= order.total_price %></b></th>
+				<th><b><%= order.translated_status %></b></th>
+				<% if worker_signed_in? %>
+				<% if current_worker.edit_order_access_is_given? == true %>
+				<th>
+					<%= link_to edit_admin_order_path(order) do %>
+					<i class="large edit icon"></i>
+					<% end%>
+					<% end%>
+					<% if current_worker.destroy_order_access_is_given? == true %>
+					<%= link_to admin_order_path(order), data: { confirm: 'Вы уверены?' },method: :delete do %>
+					<i class="circular inverted red trash alternate outline icon"></i>
+					<% end %>
+				</th>
+				<% end%>
+				<% end %>
+			</tr>
 		<% end %>
-	</tr>
 	<% end %>
 </table>
