--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: admin_check_params_path, method: :get, local: true do |f| %>
+<%= form_with scope: :query, url: admin_check_params_path, method: :get, local: true do |f| %>
 	<br>
 	<div class="row justify-content-center">
 		<div class="col">
@@ -8,6 +8,8 @@
 		<div class="col">
 			<%= f.label  :delivery_type, "Тип доставки:" %>
 			<%= f.select(:delivery_type,
+			#binding.pry
+
 		            		Order.translated_delivery_types.collect {
 		            		|delivery| [ delivery[0], delivery[1] ]
 		            		}, include_blank: true ) %><br>
@@ -16,10 +18,10 @@
 			<%= f.label "Поиск:" %>
 			<%= f.text_field :client_name, class:"form-control" %>
 		</div>
-		<div class="col">
+		<!-- <div class="col">
 			<%= f.label "Значение:" %>
-			<%= f.text_field :client_email, placeholder: 'Тип доставки', class:"form-control" %>
-		</div>
+			<%= f.text_field :client_name, placeholder: 'Тип доставки', class:"form-control" %>
+		</div> -->
 	</div>
 	<br>
 	<div class="row justify-content-center">
@@ -27,9 +29,9 @@
 	</div>
 	<br>
 	<div class="row justify-content-center">
-		<%= link_to 'За указанный период', admin_orders_path, class:"btn btn-info mr-2" %>
-		<%= link_to 'За сегодня', admin_orders_path, class:"btn btn-info mr-2" %>
-		<%= link_to 'За вчера', admin_orders_path, class:"btn btn-info mr-2" %>
+		<%= link_to 'За указанный период', admin_check_params_path, class:"btn btn-info mr-2" %>
+		<%= link_to 'За сегодня', admin_check_params_path, class:"btn btn-info mr-2" %>
+		<%= link_to 'За вчера', admin_check_params_path, class:"btn btn-info mr-2" %>
 		<%= link_to 'За текущий месяц', admin_orders_path, class:"btn btn-info mr-2" %>
 		<%= link_to 'За текущий год', admin_orders_path, class:"btn btn-info mr-2" %>
 		<%= link_to 'За все время', admin_orders_path, class:"btn btn-info mr-2" %>
