--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_with url: admin_check_params_path, method: :get, local: true do |f| %>
+<%= form_with scope: :query, url: admin_check_params_path, method: :get, local: true do |f| %>
 	<br><div class="row justify-content-center">
 		 <div class="col">
 			<%= f.label :product, "Товары:" %> 
 			
-			<%= f.collection_select :product_id, Product.all, :id, :name, class:"form-control" %>
+			<%= f.collection_select :product_id, Product.all, :id, :name, class:"form-control", include_blank: true %>
 		</div> 
 		<div class="col">
 			<%= f.label  :delivery_type, "Тип доставки:" %>
