--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -37,10 +37,10 @@
 	<div class="row justify-content-center">
 
 		<%= link_to 'За указанный период', admin_orders_path, class:"btn btn-info mr-2" %>
-		<%= link_to 'За сегодня', admin_orders_path, class:"btn btn-info mr-2" %>
-		<%= link_to 'За вчера', admin_orders_path, class:"btn btn-info mr-2" %>
-		<%= link_to 'За текущий месяц', admin_orders_path, class:"btn btn-info mr-2" %>
-		<%= link_to 'За текущий год', admin_orders_path, class:"btn btn-info mr-2" %>
+		<%= link_to 'За сегодня', admin_search_by_date_path, class:"btn btn-info mr-2" %>
+		<%= link_to 'За вчера', admin_search_by_date_1_day_ago_path, class:"btn btn-info mr-2" %>
+		<%= link_to 'За текущий месяц', admin_search_by_month_path, class:"btn btn-info mr-2" %>
+		<%= link_to 'За текущий год', admin_search_by_year_path, class:"btn btn-info mr-2" %>
 		<%= link_to 'За все время', admin_orders_path, class:"btn btn-info mr-2" %>
 
 	</div>
