--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -1,16 +1,16 @@
 <%= form_with scope: :query, url: admin_check_params_path, method: :get, local: true do |f| %>
-<br>
-<div class="row justify-content-center">
-	<div class="col">
-		<%= f.label :product, "Товары:" %><br>
-		<%= f.collection_select :product_id, Product.all, :id, :name, class:"form-control" , include_blank: true %>
-	</div>
-	<div class="col">
-		<%= f.label  :delivery_type, "Тип доставки:" %><br>
-		<%= f.select(:delivery_type,
-			Order.translated_delivery_types.collect {
-				|delivery| [ delivery[0], delivery[1] ]
-			}, include_blank: true ) %><br>
+	<br>
+	<div class="row justify-content-center">
+		<div class="col">
+			<%= f.label :product, "Товары:" %><br>
+			<%= f.collection_select :product_id, Product.all, :id, :name, class:"form-control" , include_blank: true %>
+		</div>
+		<div class="col">
+			<%= f.label  :delivery_type, "Тип доставки:" %><br>
+			<%= f.select(:delivery_type,
+				Order.translated_delivery_types.collect {
+					|delivery| [ delivery[0], delivery[1] ]
+				}, include_blank: true ) %><br>
 		</div>
 		<div class="col">
 			<%= f.label :client_addres, "Имя:" %>
@@ -24,17 +24,12 @@
 	</div>
 	<br>
 	<br>
+	<!-- <div class="datepicker-here" data-timepicker="true"></div> -->
 	<div class="row justify-content-center">
-
-		<div class="datepicker-here" data-timepicker="true"></div>
-
-		<%= f.label :start, 'C' %>
-		<%= f.date_field :start %>
-
+		<%= f.label :start, 'C  ' %>
+		<%= f.date_field :start_date %>&nbsp;&nbsp;
 		<%= f.label :end, 'По	' %>
-		<%= f.date_field :end %>
-
-		<%= link_to 'За указанный период', admin_orders_path, class:"btn btn-info mr-2" %>
+		<%= f.date_field :end_date %>&nbsp;&nbsp;
 		<%= link_to 'За сегодня', admin_search_by_date_path, class:"btn btn-info mr-2" %>
 		<%= link_to 'За вчера', admin_search_by_date_1_day_ago_path, class:"btn btn-info mr-2" %>
 		<%= link_to 'За текущий месяц', admin_search_by_month_path, class:"btn btn-info mr-2" %>
@@ -45,6 +40,5 @@
 	<div class="row justify-content-center">
 		<%= f.submit 'Применить условия', class:"btn btn-success mr-2" %>
 		<%= link_to 'Сбросить фильтр', admin_orders_path, class:"btn btn-danger" %>
-
 	</div>
-	<% end %>
+<% end %>
